service.yml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: reddit-clone
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
